delete api, pagination and sort